# peven

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: publish.yml  release-gate.yml
examples/: debate.py  guarded_batch.py  keyed_join.py  refine.py  simple.py  trace.py
examples/minigrid/: agents.py  gridworld.py  net.py  render.py  tools.py
src/peven/: __init__.py  cli.py  juliapkg.json
src/peven/authoring/: __init__.py  _expr.py  env.py  executor.py  guard.py  ir.py  join.py  sinks.py  topology.py
src/peven/cli/: __init__.py  loader.py  main.py
src/peven/cli/commands/: __init__.py  review.py  run.py  validate.py
src/peven/handoff/: __init__.py  _tokens.py  callbacks.py  framing.py  lowering.py  messages.py
src/peven/integrations/: pydantic_ai.py
src/peven/petri/: __init__.py  dsl.py  engine.py  executors.py  guards.py  render.py  schema.py  store.py  types.py  validation.py
src/peven/runtime/: __init__.py  bootstrap.py  bridge.py  sinks.py  state.py  store.py
src/peven/shared/: __init__.py  errors.py  events.py  token.py
tests/: __init__.py  conftest.py  test_cli.py  test_dsl.py  test_e2e.py  test_engine.py  test_executors.py  test_guards.py  test_integration.py  test_public_api.py  test_render.py  test_store.py  test_validation.py
tests/authoring/: test_decorators.py  test_env_core.py  test_errors.py  test_events.py  test_executor.py  test_guards.py  test_joins.py  test_store_and_sinks.py  test_tokens.py  test_topology_validation.py
tests/gridworld/: __init__.py  baseline.py  test_fog.py  test_gridworld.py  test_mover_model.py  test_net.py  test_tools.py
tests/handoff/: test_dispatch.py  test_net_spec_lowering.py  test_protocol_framing.py  test_protocol_messages.py  test_protocol_payloads.py
tests/runtime/: __init__.py  conftest.py  test_adapter_e2e.py  test_adapter_protocol_compat.py  test_bootstrap.py  test_bridge_callbacks.py  test_bridge_completion.py  test_bridge_concurrency.py  test_bridge_contract.py  test_bridge_correlation.py  test_bridge_events.py  test_bridge_failures.py  test_bridge_load_run.py  test_bridge_session.py  test_bridge_state.py  test_env_run.py  test_examples_surface.py  test_protocol_compat.py  test_pydantic_ai_integration.py  test_rich_sink_transcript.py  test_runtime_dispatch.py  test_runtime_e2e.py  test_smoke_example.py
