[project]
name = "peven"
version = "0.1.0"
description = "Topological runtime for declarative evaluations"
license = "Apache-2.0"
readme = "README.md"
authors = [
    { name = "Ulysses Sekai Tully Carr" },
]
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "pydantic-ai",
    "rubric",
    "rich",
    "typer",
]

[project.urls]
Homepage = "https://github.com/utullyca/peven"
Repository = "https://github.com/utullyca/peven"
Issues = "https://github.com/utullyca/peven/issues"

[project.scripts]
peven = "peven.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/peven"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=0.25",
    "pytest-cov>=6,<7",
    "ruff>=0.15.7",
    "httpx",
    "pytest-xdist>=3.8.0",
    "pytest-timeout>=2.4.0",
    "twine>=6.2.0",
    "pre-commit>=4.5.1",
]

[tool.pytest.ini_options]
timeout = 10

[tool.coverage.report]
exclude_lines = ["if __name__ == .__main__.:"]

[tool.ruff]
target-version = "py311"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
